// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps has login 1`] = `
Promise {
  "_40": 0,
  "_55": Object {
    "meta": Object {
      "email": "name",
    },
    "payload": Object {
      "api": Object {
        "method": "post",
        "params": Object {
          "email": "name",
          "password": "pass",
        },
        "path": "/noo/login",
      },
    },
    "type": "LOGIN",
  },
  "_65": 1,
  "_72": null,
}
`;

exports[`mapDispatchToProps has loginWithFacebook 1`] = `
Promise {
  "_40": 0,
  "_55": Object {
    "payload": Object {
      "api": Object {
        "method": "post",
        "path": "/noo/login/facebook-token/oauth?access_token=token",
      },
    },
    "type": "LOGIN_WITH_FACEBOOK",
  },
  "_65": 1,
  "_72": null,
}
`;

exports[`mapDispatchToProps has loginWithGoogle 1`] = `
Promise {
  "_40": 0,
  "_55": Object {
    "payload": Object {
      "api": Object {
        "method": "post",
        "path": "/noo/login/google-token/oauth?access_token=token",
      },
    },
    "type": "LOGIN_WITH_GOOGLE",
  },
  "_65": 1,
  "_72": null,
}
`;

exports[`mergeProps adds finishLogin 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "api": Object {
          "method": "post",
          "path": "/noo/login/facebook-token/oauth?access_token=token",
        },
      },
      "type": "LOGIN_WITH_FACEBOOK",
    },
  ],
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($playerId: String, $platform: String, $version: String) {
        registerDevice(playerId: $playerId, platform: $platform, version: $version) {
          success
        }
      }",
        "variables": Object {
          "platform": "ios_dev",
          "playerId": 5,
          "version": "2",
        },
      },
      "type": "REGISTER_DEVICE",
    },
  ],
]
`;
